Fixed Fade in animation by moving from top to bottom so scrollbar doesnt appear

--- a/src/styles/helpers/_animations.scss
+++ b/src/styles/helpers/_animations.scss
@@ -1,5 +1,5 @@
 @keyframes fadein {
-    from { opacity: 0; transform:translateY(10px)}
+    from { opacity: 0; transform:translateY(-10px)}
     to   { opacity: 1; transform:translateY(0)}
 }
 
